--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
       <header class="header">
         <div class="header__panel">
           <p id="logo" class="logo header__logo">automotive</p>
-          <div id="burger">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
+          <button id="burger"></button>
           <nav>
-            <ul id="navbar" class="navbar">
+            <ul class="navbar">
               <li><a>Home</a></li>
               <li><a>About</a></li>
               <li><a>Services</a></li>
